Aggiorna README.md con sezione H2 per sviluppo locale